# agrisense

./: .env.example  .gitignore  README.md  config.py  db.sqlite3  main.py  pyproject.toml  requirements.txt
agrisense/: asgi.py  settings.py  urls.py  wsgi.py
farms/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
farms/migrations/: 0001_initial.py  0002_alter_notificationpreference_phone_number.py  0003_alter_notificationpreference_phone_number.py
static/farms/css/: style.css
templates/farms/: base.html  dashboard.html  farm_manage.html  login.html
templates/farms/partials/: farm_form.html  farm_table.html  pref_form.html
